[package]
name = "mtots_web"
version = "0.1.0"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4"

[dependencies.mtots]
path = "../mtots"
version = "0.1.2"
default-features = false
features = []
